# betX-main

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: __init__.py  cricket.py  user.py
backend/app/routers/: bets.py  cricket.py  users.py
backend/app/utils/: checks.py
frontend/: package-lock.json  package.json  prettier.config.cjs
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AdminRoute.jsx  FancyBet.jsx  FancyBody.css  FancyBody.jsx  ImageSlider.jsx  MatchBet.jsx  Matchcard.jsx  Navbar.jsx  PrivateRoute.jsx
frontend/src/pages/: AdminLogin.jsx  BetsDashboard.jsx  Dashboard.jsx  Home.jsx  Loader.jsx  Login.jsx  MatchDetails.jsx
frontend/src/state/actions/: matchSlice.js  userSlice.js
frontend/src/state/store/: store.js
